feat(): make app more robust againts exceptions